--- a/appstate.json
+++ b/appstate.json
@@ -1,1 +1,128 @@
-
+[
+    {
+        "key": "dbln",
+        "value": "%7B%2261567199142730%22%3A%22N6JivkRs%22%2C%2261552490919516%22%3A%22DcdEAKx6%22%7D",
+        "domain": "facebook.com",
+        "path": "/login/device-based/",
+        "hostOnly": false,
+        "creation": "2024-10-24T11:03:31.050Z",
+        "lastAccessed": "2024-10-24T11:03:31.057Z"
+    },
+    {
+        "key": "datr",
+        "value": "-BkaZ8qqaIr0J-bTlxG6q1b1",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2024-10-24T11:03:31.057Z",
+        "lastAccessed": "2024-10-24T11:03:31.057Z"
+    },
+    {
+        "key": "sb",
+        "value": "-BkaZ-pTCN9_sR22p8XYoN2C",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2024-10-24T11:03:31.057Z",
+        "lastAccessed": "2024-10-24T11:03:31.057Z"
+    },
+    {
+        "key": "vpd",
+        "value": "v1%3B651x333x2.157599449157715",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2024-10-24T11:03:31.057Z",
+        "lastAccessed": "2024-10-24T11:03:31.057Z"
+    },
+    {
+        "key": "locale",
+        "value": "en_GB",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2024-10-24T11:03:31.057Z",
+        "lastAccessed": "2024-10-24T11:03:31.057Z"
+    },
+    {
+        "key": "ps_l",
+        "value": "1",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2024-10-24T11:03:31.057Z",
+        "lastAccessed": "2024-10-24T11:03:31.057Z"
+    },
+    {
+        "key": "ps_n",
+        "value": "1",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2024-10-24T11:03:31.057Z",
+        "lastAccessed": "2024-10-24T11:03:31.057Z"
+    },
+    {
+        "key": "m_pixel_ratio",
+        "value": "2.157599449157715",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2024-10-24T11:03:31.057Z",
+        "lastAccessed": "2024-10-24T11:03:31.057Z"
+    },
+    {
+        "key": "wd",
+        "value": "334x651",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2024-10-24T11:03:31.057Z",
+        "lastAccessed": "2024-10-24T11:03:31.057Z"
+    },
+    {
+        "key": "c_user",
+        "value": "61567199142730",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2024-10-24T11:03:31.057Z",
+        "lastAccessed": "2024-10-24T11:03:31.057Z"
+    },
+    {
+        "key": "fr",
+        "value": "0kdsJcb5Uex1x1cl7.AWVCYAvpnECPtcPeaT6gi_rirOI.BnGhn4..AAA.0.0.BnGiiA.AWU_pNRLnCo",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2024-10-24T11:03:31.057Z",
+        "lastAccessed": "2024-10-24T11:03:31.057Z"
+    },
+    {
+        "key": "xs",
+        "value": "21%3ATzqeOeEh9JD66g%3A2%3A1729767552%3A-1%3A-1",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2024-10-24T11:03:31.057Z",
+        "lastAccessed": "2024-10-24T11:03:31.057Z"
+    },
+    {
+        "key": "fbl_st",
+        "value": "101024443%3BT%3A28829460",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2024-10-24T11:03:31.057Z",
+        "lastAccessed": "2024-10-24T11:03:31.057Z"
+    },
+    {
+        "key": "wl_cbv",
+        "value": "v2%3Bclient_version%3A2655%3Btimestamp%3A1729767608",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2024-10-24T11:03:31.057Z",
+        "lastAccessed": "2024-10-24T11:03:31.057Z"
+    }
+]
