--- a/appstate.json
+++ b/appstate.json
@@ -1,12 +1,12 @@
 [
     {
         "key": "dbln",
-        "value": "%7B%2261567305420989%22%3A%22vgosPC9l%22%7D",
+        "value": "%7B%2261567305420989%22%3A%22wmyxgpgs%22%7D",
         "domain": "facebook.com",
         "path": "/login/device-based/",
         "hostOnly": false,
-        "creation": "2024-10-29T10:45:58.651Z",
-        "lastAccessed": "2024-10-29T10:45:58.652Z"
+        "creation": "2024-10-29T11:11:38.316Z",
+        "lastAccessed": "2024-10-29T11:11:38.325Z"
     },
     {
         "key": "datr",
@@ -14,8 +14,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2024-10-29T10:45:58.652Z",
-        "lastAccessed": "2024-10-29T10:45:58.652Z"
+        "creation": "2024-10-29T11:11:38.325Z",
+        "lastAccessed": "2024-10-29T11:11:38.325Z"
     },
     {
         "key": "sb",
@@ -23,8 +23,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2024-10-29T10:45:58.652Z",
-        "lastAccessed": "2024-10-29T10:45:58.652Z"
+        "creation": "2024-10-29T11:11:38.325Z",
+        "lastAccessed": "2024-10-29T11:11:38.325Z"
     },
     {
         "key": "vpd",
@@ -32,8 +32,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2024-10-29T10:45:58.652Z",
-        "lastAccessed": "2024-10-29T10:45:58.652Z"
+        "creation": "2024-10-29T11:11:38.325Z",
+        "lastAccessed": "2024-10-29T11:11:38.325Z"
     },
     {
         "key": "m_pixel_ratio",
@@ -41,8 +41,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2024-10-29T10:45:58.652Z",
-        "lastAccessed": "2024-10-29T10:45:58.652Z"
+        "creation": "2024-10-29T11:11:38.325Z",
+        "lastAccessed": "2024-10-29T11:11:38.325Z"
     },
     {
         "key": "c_user",
@@ -50,26 +50,26 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2024-10-29T10:45:58.652Z",
-        "lastAccessed": "2024-10-29T10:45:58.652Z"
-    },
-    {
-        "key": "fr",
-        "value": "0jUoSfOTrec71ufRt.AWUBI0OOIxBl56DmNtZ5_qSJFgE.BnEic5..AAA.0.0.BnILzX.AWWKUNXddCc",
-        "domain": "facebook.com",
-        "path": "/",
-        "hostOnly": false,
-        "creation": "2024-10-29T10:45:58.652Z",
-        "lastAccessed": "2024-10-29T10:45:58.652Z"
+        "creation": "2024-10-29T11:11:38.325Z",
+        "lastAccessed": "2024-10-29T11:11:38.325Z"
     },
     {
         "key": "xs",
-        "value": "10%3AtJSs2IoEPQaOyQ%3A2%3A1730198743%3A-1%3A-1",
+        "value": "20%3Av9NuHaMTOLhXLA%3A2%3A1730200280%3A-1%3A-1",
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2024-10-29T10:45:58.652Z",
-        "lastAccessed": "2024-10-29T10:45:58.652Z"
+        "creation": "2024-10-29T11:11:38.325Z",
+        "lastAccessed": "2024-10-29T11:11:38.325Z"
+    },
+    {
+        "key": "fr",
+        "value": "0jUoSfOTrec71ufRt.AWVV_wHApEsou-NGwQQQn9_bpJQ.BnEic5..AAA.0.0.BnIMLZ.AWUitznXS-w",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2024-10-29T11:11:38.325Z",
+        "lastAccessed": "2024-10-29T11:11:38.325Z"
     },
     {
         "key": "wd",
@@ -77,25 +77,25 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2024-10-29T10:45:58.652Z",
-        "lastAccessed": "2024-10-29T10:45:58.652Z"
+        "creation": "2024-10-29T11:11:38.325Z",
+        "lastAccessed": "2024-10-29T11:11:38.325Z"
     },
     {
         "key": "fbl_st",
-        "value": "101325043%3BT%3A28836645",
+        "value": "100728389%3BT%3A28836671",
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2024-10-29T10:45:58.653Z",
-        "lastAccessed": "2024-10-29T10:45:58.653Z"
+        "creation": "2024-10-29T11:11:38.325Z",
+        "lastAccessed": "2024-10-29T11:11:38.325Z"
     },
     {
         "key": "wl_cbv",
-        "value": "v2%3Bclient_version%3A2656%3Btimestamp%3A1730198747",
+        "value": "v2%3Bclient_version%3A2656%3Btimestamp%3A1730200284",
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2024-10-29T10:45:58.653Z",
-        "lastAccessed": "2024-10-29T10:45:58.653Z"
+        "creation": "2024-10-29T11:11:38.325Z",
+        "lastAccessed": "2024-10-29T11:11:38.325Z"
     }
 ]
