--- a/appstate.json
+++ b/appstate.json
@@ -1,12 +1,12 @@
 [
     {
         "key": "dbln",
-        "value": "%7B%2261567305420989%22%3A%22EcgJEHDe%22%7D",
+        "value": "%7B%2261567305420989%22%3A%22irRL69oc%22%2C%2261567883070999%22%3A%22XFduwPIF%22%7D",
         "domain": "facebook.com",
         "path": "/login/device-based/",
         "hostOnly": false,
-        "creation": "2024-10-29T11:23:42.092Z",
-        "lastAccessed": "2024-10-29T11:23:42.092Z"
+        "creation": "2024-10-29T11:44:54.414Z",
+        "lastAccessed": "2024-10-29T11:44:54.414Z"
     },
     {
         "key": "datr",
@@ -14,8 +14,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2024-10-29T11:23:42.092Z",
-        "lastAccessed": "2024-10-29T11:23:42.092Z"
+        "creation": "2024-10-29T11:44:54.415Z",
+        "lastAccessed": "2024-10-29T11:44:54.415Z"
     },
     {
         "key": "sb",
@@ -23,8 +23,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2024-10-29T11:23:42.092Z",
-        "lastAccessed": "2024-10-29T11:23:42.092Z"
+        "creation": "2024-10-29T11:44:54.415Z",
+        "lastAccessed": "2024-10-29T11:44:54.415Z"
     },
     {
         "key": "vpd",
@@ -32,8 +32,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2024-10-29T11:23:42.092Z",
-        "lastAccessed": "2024-10-29T11:23:42.092Z"
+        "creation": "2024-10-29T11:44:54.415Z",
+        "lastAccessed": "2024-10-29T11:44:54.415Z"
     },
     {
         "key": "m_pixel_ratio",
@@ -41,35 +41,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2024-10-29T11:23:42.092Z",
-        "lastAccessed": "2024-10-29T11:23:42.092Z"
-    },
-    {
-        "key": "c_user",
-        "value": "61567305420989",
-        "domain": "facebook.com",
-        "path": "/",
-        "hostOnly": false,
-        "creation": "2024-10-29T11:23:42.092Z",
-        "lastAccessed": "2024-10-29T11:23:42.092Z"
-    },
-    {
-        "key": "xs",
-        "value": "17%3AEDba250G67R-6Q%3A2%3A1730201004%3A-1%3A-1",
-        "domain": "facebook.com",
-        "path": "/",
-        "hostOnly": false,
-        "creation": "2024-10-29T11:23:42.092Z",
-        "lastAccessed": "2024-10-29T11:23:42.092Z"
-    },
-    {
-        "key": "fr",
-        "value": "0jUoSfOTrec71ufRt.AWWi5q2dJFr9aOqRXIuJcLVIX5E.BnEic5..AAA.0.0.BnIMWt.AWUVow87ZLE",
-        "domain": "facebook.com",
-        "path": "/",
-        "hostOnly": false,
-        "creation": "2024-10-29T11:23:42.092Z",
-        "lastAccessed": "2024-10-29T11:23:42.092Z"
+        "creation": "2024-10-29T11:44:54.415Z",
+        "lastAccessed": "2024-10-29T11:44:54.415Z"
     },
     {
         "key": "wd",
@@ -77,25 +50,52 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2024-10-29T11:23:42.092Z",
-        "lastAccessed": "2024-10-29T11:23:42.092Z"
+        "creation": "2024-10-29T11:44:54.415Z",
+        "lastAccessed": "2024-10-29T11:44:54.415Z"
+    },
+    {
+        "key": "c_user",
+        "value": "61567883070999",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2024-10-29T11:44:54.415Z",
+        "lastAccessed": "2024-10-29T11:44:54.415Z"
+    },
+    {
+        "key": "fr",
+        "value": "0jUoSfOTrec71ufRt.AWWmgJ_XFV6qxhQCmY_FHd2KzzU.BnEic5..AAA.0.0.BnIMqg.AWXfycO7-ms",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2024-10-29T11:44:54.415Z",
+        "lastAccessed": "2024-10-29T11:44:54.415Z"
+    },
+    {
+        "key": "xs",
+        "value": "8%3AoFimMZaFQQQsmg%3A2%3A1730202273%3A-1%3A-1",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2024-10-29T11:44:54.415Z",
+        "lastAccessed": "2024-10-29T11:44:54.415Z"
     },
     {
         "key": "fbl_st",
-        "value": "100731301%3BT%3A28836683",
+        "value": "101221737%3BT%3A28836704",
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2024-10-29T11:23:42.093Z",
-        "lastAccessed": "2024-10-29T11:23:42.093Z"
+        "creation": "2024-10-29T11:44:54.415Z",
+        "lastAccessed": "2024-10-29T11:44:54.415Z"
     },
     {
         "key": "wl_cbv",
-        "value": "v2%3Bclient_version%3A2656%3Btimestamp%3A1730201008",
+        "value": "v2%3Bclient_version%3A2656%3Btimestamp%3A1730202276",
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2024-10-29T11:23:42.093Z",
-        "lastAccessed": "2024-10-29T11:23:42.093Z"
+        "creation": "2024-10-29T11:44:54.415Z",
+        "lastAccessed": "2024-10-29T11:44:54.415Z"
     }
 ]
